--- a/gatherling/styles/Chandra/css/stylesheet.css
+++ b/gatherling/styles/Chandra/css/stylesheet.css
@@ -1,1 +1,14 @@
-/*  Gatherling Style Sheet    --------------------------------------------------------------	Style name:	Chandra	Based on style:	Magic: The Gathering Character "Chandra"	Author:  Daniel K. Billett Jr.     --------------------------------------------------------------*/@import url("text.css");@import url("960.css");@import url("gatherling.css");@import url("pauperkrew.css");@import url("pagination.css");
+/*  Gatherling Style Sheet
+    --------------------------------------------------------------
+    Style name:	Chandra
+    Based on style:	Magic: The Gathering Character "Chandra"
+    Author:  Daniel K. Billett Jr.
+    --------------------------------------------------------------
+*/
+
+@import url("text.css");
+@import url("960.css");
+@import url("gatherling.css");
+@import url("pauperkrew.css");
+@import url("pagination.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css");
