--- a/gatherling/styles/Chandra/css/gatherling.css
+++ b/gatherling/styles/Chandra/css/gatherling.css
@@ -492,3 +492,41 @@ a.create_deck_link {
     -moz-osx-font-smoothing: grayscale;
     transform: translate(0, 0);
 }
+
+/* Style tab links */
+.tablink {
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -webkit-box-shadow: #000 0 2px 10px;
+    -moz-box-shadow: #000 0 2px 10px;
+    box-shadow: #000 0 2px 10px;
+    background: #262626;
+    border: 1px solid black;
+    /*margin-top: 1px;*/
+    /*margin-bottom: 1px;*/
+  background-color: #262626;
+  color: #D88F6D;
+  float: left;
+  /*border: none;*/
+  /*outline: none;*/
+  /*cursor: pointer;*/
+  padding: 8px 8px;
+  margin: 1px 0px;
+  /*font-size: 15px;*/
+  width: 25%;
+}
+
+.tablink:hover {
+    color: #D45E28;
+   /*text color of selected and active item*/
+    background: #353535;
+    border: 1px solid #D45E28;
+}
+
+.tabcontent {
+  color: white;
+  display: none;
+  padding: 50px 20px;
+  height: 100%;
+}
