--- a/gatherling/styles/Chandra/css/gatherling.css
+++ b/gatherling/styles/Chandra/css/gatherling.css
@@ -470,7 +470,7 @@ a.create_deck_link {
 .discordlogin {
     background: #7289DA;
     color: #fff;
-    font-family: 'Helvetica', 'Arial', sans-sefir;
+    font-family: 'Helvetica', 'Arial', sans-serif;
     text-decoration: none;
 }
 
