More cleanup of events (series) page
Remove old format.php that didn't do much.

--- a/gatherling/styles/ChandraNeue/css/gatherling.css
+++ b/gatherling/styles/ChandraNeue/css/gatherling.css
@@ -66,6 +66,7 @@ table.bracket td.even {
     right: 0px;
 }
 .series .series-logo {
+    width: 360px;
     margin-right: 40px;
 }
 .series .series-logo img {
