Render header and footer using mustache

--- a/gatherling/views/partials/formatDropDown.mustache
+++ b/gatherling/views/partials/formatDropDown.mustache
@@ -1,4 +1,4 @@
-<select class="inputbox" name="{{form_name}}">
+<select class="inputbox" name="{{formName}}">
     <option value="">{{title}}</option>
     {{#formats}}
         <option value="{{name}}" {{#isSelected}}selected{{/isSelected}}>{{name}}</option>
