Make yet more use of the dropMenu partial

--- a/gatherling/views/partials/dropMenu.mustache
+++ b/gatherling/views/partials/dropMenu.mustache
@@ -3,6 +3,6 @@
         <option value="">{{default}}</option>
     {{/default}}
     {{#options}}
-        <option value="{{value}}" {{#isSelected}}selected{{/isSelected}}>{{value}}</option>
+        <option value="{{value}}" {{#isSelected}}selected{{/isSelected}}>{{name}}</option>
     {{/options}}
 </select>
