Let's call an option element's text "text" and not "name"
It's a little more accurate and a lot of other things are called "name".

--- a/gatherling/views/partials/dropMenu.mustache
+++ b/gatherling/views/partials/dropMenu.mustache
@@ -3,6 +3,6 @@
         <option value="">{{default}}</option>
     {{/default}}
     {{#options}}
-        <option value="{{value}}" {{#isSelected}}selected{{/isSelected}}>{{name}}</option>
+        <option value="{{value}}" {{#isSelected}}selected{{/isSelected}}>{{text}}</option>
     {{/options}}
 </select>
