Mustachify client dropdown menu

--- a/gatherling/views/partials/dropMenu.mustache
+++ b/gatherling/views/partials/dropMenu.mustache
@@ -1,4 +1,4 @@
-<select class="inputbox" name="{{name}}">
+<select class="inputbox" name="{{name}}" {{#id}}id="{{id}}"{{/id}}>
     {{#default}}
         <option value="">{{default}}</option>
     {{/default}}
