Mustachify playerList (player registration page on event.php)
In order to do this:

- Get rid of some align="center" in favor of a .c class.
- Get rid of some font tags.
- Get rid of some unnecessary colspan attrs.
- Mustachify stringField
- Fix the HTML of playerList so that it is legal.
- Create a helper function that converts an Entry into some context vars.
- Add some helper functions to the Event model like isSwiss and isFinished.
- Convert a bunch of variables and function names from snake_case to camelCase as per PSR-21 coding standard.
- Mustachifiy not_allowed into notAllowed.
- Remove displayPlayerEmailPopUp in favor of inlining in the template because it is only used in one place.
- Mustachify linkTo.
- Mustachify createDeckLink.
- Fix some bad HTML (improper nesting and unclosed tags) in medalList.

--- a/gatherling/views/partials/eventList.mustache
+++ b/gatherling/views/partials/eventList.mustache
@@ -1,7 +1,7 @@
 <form action="event.php" method="get">
     <table class="form" style="border-width: 0px" align="center">
         <tr>
-            <td colspan="2" align="center"><b>Filters</b></td>
+            <td colspan="2" class="c"><b>Filters</b></td>
         </tr>
         <tr>
             <td>&nbsp;</td>
