--- a/gatherling/views/partials/trophyField.mustache
+++ b/gatherling/views/partials/trophyField.mustache
@@ -3,7 +3,7 @@
         <td>&nbsp;</td>
     </tr>
     <tr>
-        <td colspan="2" align="center">
+        <td colspan="2" class="c">
             <img alt="Trophy" src="displayTrophy.php?event={{eventName}}" />
         </td>
     </tr>
