--- a/gatherling/views/partials/medalList.mustache
+++ b/gatherling/views/partials/medalList.mustache
@@ -1,30 +1,42 @@
 <form action="event.php" method="post" enctype="multipart/form-data">
     <input type="hidden" name="name" value="{{eventName}}">
-    <table style="border-width: 0px" align="center">
-        <tr><td colspan="2">
-            <input type="hidden" name="view" value="reg">
-            <table align="center" style="border-width: 0px;">
-                <tr><td align="center" colspan="2"><b>Medals</td></tr>
-                <tr><td colspan="2" width=200>&nbsp;</td></tr>
-                <tr><td align="center"><b>Medal</td>
-                    <td align="center"><b>Player</td></tr>
-                {{#finalists}}
+    <table style="border-width: 0">
+        <tr>
+            <td colspan="2">
+                <input type="hidden" name="view" value="reg">
+                <table style="border-width: 0">
                     <tr>
-                        <td align="center">
-                            <img alt="1st" src="{{img}}" />
-                        </td>
-                        <td align="center">
-                            {{#playerDropMenu}}
-                                {{> dropMenu}}
-                            {{/playerDropMenu}}
+                        <td class="c" colspan="2"><b>Medals</b></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" width=200>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td class="c"><b>Medal</b></td>
+                        <td class="c"><b>Player</b></td>
+                    </tr>
+                    {{#finalists}}
+                        <tr>
+                            <td class="c">
+                                <img alt="1st" src="{{img}}" />
+                            </td>
+                            <td class="c">
+                                {{#playerDropMenu}}
+                                    {{> dropMenu}}
+                                {{/playerDropMenu}}
+                            </td>
+                        </tr>
+                    {{/finalists}}
+                    <tr>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" class="c">
+                            <input class="inputbutton" type="submit" name="mode" value="Update Medals">
                         </td>
                     </tr>
-                {{/finalists}}
-                <tr><td>&nbsp;</td></tr>
-                <tr><td colspan="2" align="center">
-                    <input class="inputbutton" type="submit" name="mode" value="Update Medals">
+                </table>
+            </td>
+        </tr>
+    </table>
 </form>
-</td></tr>
-</table>
-</td></tr>
-</table>
