Remove stray backtick in template

--- a/gatherling/views/partials/playerList.mustache
+++ b/gatherling/views/partials/playerList.mustache
@@ -155,7 +155,7 @@
                 {{/isSingleElim}}
             </td>
         </tr>
-    </table>`
+    </table>
 {{/notYetStarted}}
 <div id="event_run_actions">
     <form action="event.php" method="post">
