--- a/gatherling/views/reportsForm.mustache
+++ b/gatherling/views/reportsForm.mustache
@@ -2,7 +2,7 @@
     <div id="gatherling_main" class="box">
         <div class="uppertitle">Host Control Panel</div>
         {{> controlPanel}}
-        <table style="border-width: 0px" align="center">
+        <table class="c" style="border-width: 0">
             <center>
                 <h2><b>Player Information</b></h2>
             </center>
