--- a/gatherling/views/eventList.mustache
+++ b/gatherling/views/eventList.mustache
@@ -3,7 +3,7 @@
         <div class="uppertitle">Host Control Panel</div>
         {{> controlPanel }}
         <form action="event.php" method="get">
-            <table class="form" style="border-width: 0">
+            <table class="form c" style="border-width: 0">
                 <tr>
                     <td colspan="2" class="c"><b>Filters</b></td>
                 </tr>
@@ -46,7 +46,7 @@
                     </td>
                 </tr>
             </table>
-            <table style="border-width: 0px" align="center" cellpadding="3">
+            <table class="c" style="border-width: 0" cellpadding="3">
                 <tr>
                     <td colspan="5">&nbsp;</td>
                 </tr>
