--- a/gatherling/views/matchList.mustache
+++ b/gatherling/views/matchList.mustache
@@ -16,7 +16,7 @@
             <input type="hidden" name="name" value="{{event.name}}">
             <input type="hidden" name="eventname" value="{{event.name}}">
             <input type="hidden" name="view" value="match">
-            <table style="border-width: 0">
+            <table class="c" style="border-width: 0">
                 {{#hasMatches}}
                     <tr class="lefted">
                         <th class="c" style="padding-right: 10px;">Round</th>
@@ -158,7 +158,7 @@
             </p>
         {{/event.finalized}}
         {{#isLeague}}
-            <table style="border-width: 0">
+            <table class="c" style="border-width: 0">
                 <tr>
                     <td colspan="2" class="c">
                         <form action="event.php" method="post">
