--- a/gatherling/views/eventList.mustache
+++ b/gatherling/views/eventList.mustache
@@ -63,7 +63,7 @@
                         <td><a href="{{url}}">{{name}}</a></td>
                         <td>{{format}}</td>
                         <td>{{kvalueDisplay}}</td>
-                        <td align=\"center\">{{players}}</td>
+                        <td class="c">{{players}}</td>
                         <td>{{host}}{{#cohost}}/{{cohost}}{{/cohost}}</td>
                         <td class="c">{{#finalized}}&#x2714;{{/finalized}}</td>
                     </tr>
