Banish the last center element in event HTML, fix invalid h2 placing

--- a/gatherling/views/reportsForm.mustache
+++ b/gatherling/views/reportsForm.mustache
@@ -3,11 +3,11 @@
         <div class="uppertitle">Host Control Panel</div>
         {{> controlPanel}}
         <table class="c" style="border-width: 0">
-            <center>
-                <h2><b>Player Information</b></h2>
-            </center>
             <tr>
-                <td>&nbsp;</td>
+                <td colspan="3" class="c"><h2><b>Player Information</b></h2></td>
+            </tr>
+            <tr>
+                <td colspan="3">&nbsp;</td>
             </tr>
             {{^hasEntries}}
                 <tr>
