Don't center a table that didn't used to be centered
I was removing all the align=center from tables, then realized it was useful sometimes, and then was over-zealous and put it "back" onto some tables that never had it before and look bad with it. Fix that.

--- a/gatherling/views/eventForm.mustache
+++ b/gatherling/views/eventForm.mustache
@@ -3,7 +3,7 @@
         <div class="uppertitle">Host Control Panel</div>
         {{> controlPanel}}
         <form action="event.php" method="post" enctype="multipart/form-data">
-            <table class="form c" style="border-width: 0">
+            <table class="form" style="border-width: 0">
                 {{#currentlyEditing}}
                     <tr>
                         <th>Currently Editing</th>
