Another over-zealously added center alignment on a table
This was not present in the "original" design.

--- a/gatherling/views/matchList.mustache
+++ b/gatherling/views/matchList.mustache
@@ -16,7 +16,7 @@
             <input type="hidden" name="name" value="{{event.name}}">
             <input type="hidden" name="eventname" value="{{event.name}}">
             <input type="hidden" name="view" value="match">
-            <table class="c" style="border-width: 0">
+            <table style="border-width: 0">
                 {{#hasMatches}}
                     <tr class="lefted">
                         <th class="c" style="padding-right: 10px;">Round</th>
