Don't form URLs for hrefs in mustache templates, it's not urlencoding safe
The extra params on http_build_query here are just to make it use "%20" instead
of "+" as rawurlencode does elsewhere.

--- a/gatherling/views/playerList.mustache
+++ b/gatherling/views/playerList.mustache
@@ -61,7 +61,7 @@
                         {{#canUndrop}}
                             <td>
                                 &#x2690; {{dropRound}}
-                                <a href="event.php?view=reg&player={{player.name}}&event={{event.id}}&action=undrop&event_id={{event.id}}">(undrop)</a>
+                                <a href="{{ undropLink }}">(undrop)</a>
                             </td>
                         {{/canUndrop}}
                         {{#medalImg}}
