--- a/gatherling/views/eventForm.mustache
+++ b/gatherling/views/eventForm.mustache
@@ -35,7 +35,7 @@
                     </tr>
                 {{/currentlyEditing}}
                 <tr>
-                    <th>Date & Time</th>
+                    <th>Date &amp; Time</th>
                     <td>
                         {{#yearDropMenu}}{{> dropMenu}}{{/yearDropMenu}}
                         {{#monthDropMenu}}{{> dropMenu}}{{/monthDropMenu}}
