Form all URLs in PHP where they can be escaped and pass them whole to Mustache

--- a/gatherling/views/partials/trophyField.mustache
+++ b/gatherling/views/partials/trophyField.mustache
@@ -4,7 +4,7 @@
     </tr>
     <tr>
         <td colspan="2" class="c">
-            <img alt="Trophy" src="displayTrophy.php?event={{eventName}}" />
+            <img alt="Trophy" src="{{trophySrc}}" />
         </td>
     </tr>
 {{/hasTrophy}}
