Form all URLs in PHP not mustache, so they can be urlencoded

--- a/gatherling/views/partials/header.mustache
+++ b/gatherling/views/partials/header.mustache
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ siteName }} | {{ title }}</title>
-    <link rel="stylesheet" type="text/css" href="{{ css }}?v={{ gitHash }}">
+    <link rel="stylesheet" type="text/css" href="{{ cssLink }}">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/keyrune@latest/css/keyrune.css">
     <script src="//code.jquery.com/jquery-latest.min.js"></script>
     {{#enableVue}}
