Standardize on "link" for all hrefs and "src" for all srcs

--- a/gatherling/views/eventList.mustache
+++ b/gatherling/views/eventList.mustache
@@ -59,7 +59,7 @@
                 </tr>
                 {{#results}}
                     <tr>
-                        <td><a href="{{url}}">{{name}}</a></td>
+                        <td><a href="{{link}}">{{name}}</a></td>
                         <td>{{format}}</td>
                         <td>{{kvalueDisplay}}</td>
                         <td class="c">{{players}}</td>
