--- a/gatherling/views/medalList.mustache
+++ b/gatherling/views/medalList.mustache
@@ -22,7 +22,7 @@
                             {{#finalists}}
                                 <tr>
                                     <td class="c">
-                                        <img alt="1st" src="{{img}}" />
+                                        <img alt="1st" src="{{src}}" />
                                     </td>
                                     <td class="c">
                                         {{#playerDropMenu}}
