--- a/gatherling/views/partials/controlPanel.mustache
+++ b/gatherling/views/partials/controlPanel.mustache
@@ -6,7 +6,7 @@
         <td class="c">
             <ol class="inline-list pipe">
                 {{#controlPanelLinks}}
-                    <li><a href="{{href}}">{{text}}</a></li>
+                    <li><a href="{{link}}">{{text}}</a></li>
                 {{/controlPanelLinks}}
             </ol>
         </td>
