--- a/gatherling/views/partials/header.mustache
+++ b/gatherling/views/partials/header.mustache
@@ -18,7 +18,7 @@
     <div id="maincontainer" class="container_12">
         <div id="header_bar" class="box">
             <div id="header_logo">
-                <img alt="" src="{{headerLogoImg}}">
+                <img alt="" src="{{headerLogoSrc}}">
             </div>
         <div id="action"></div>
     </div>
