--- a/gatherling/views/playerList.mustache
+++ b/gatherling/views/playerList.mustache
@@ -64,11 +64,11 @@
                                 <a href="{{ undropLink }}">(undrop)</a>
                             </td>
                         {{/canUndrop}}
-                        {{#medalImg}}
+                        {{#medalSrc}}
                             <td class="c">
-                                <img alt="Medal" src="{{medalImg}}"/>
+                                <img alt="Medal" src="{{medalSrc}}"/>
                             </td>
-                        {{/medalImg}}
+                        {{/medalSrc}}
                         <td>
                             {{^player.emailAddress}}
                                 {{#gameName}}{{> gameName}}{{/gameName}}
