--- a/gatherling/views/matchList.mustache
+++ b/gatherling/views/matchList.mustache
@@ -9,7 +9,7 @@
         </p>
         <p class="c">
             {{#roundLinks}}
-                <a href="{{href}}">{{text}}</a>
+                <a href="{{link}}">{{text}}</a>
             {{/roundLinks}}
         </p>
         <form action="event.php" method="post" enctype="multipart/form-data">
