--- a/gatherling/views/pointsAdjustmentForm.mustache
+++ b/gatherling/views/pointsAdjustmentForm.mustache
@@ -16,8 +16,8 @@
                 {{#entries}}
                     <tr>
                         <td>{{player.name}}</td>
-                        <td>{{#medal}}<img alt="medal" src="{{medalImg}}">{{/medal}}</td>
-                        <td>{{#verifiedImg}}<img alt="Player posted deck" title="Player posted deck" src="{{verifiedImg}}"/>{{/verifiedImg}}</td>
+                        <td>{{#medal}}<img alt="medal" src="{{medalSrc}}">{{/medal}}</td>
+                        <td>{{#verifiedSrc}}<img alt="Player posted deck" title="Player posted deck" src="{{verifiedSrc}}"/>{{/verifiedSrc}}</td>
                         <td style="text-align: center;">
                             <input class="inputbox" type="text" style="width: 50px;" name="adjustments[{{player.name}}]" value="{{adjustment.adjustment}}" />
                        </td>
