Do registration "paste stuff" in a simpler way

--- a/gatherling/views/playerList.mustache
+++ b/gatherling/views/playerList.mustache
@@ -198,7 +198,7 @@
             {{#notYetStarted}}
                 <p>
                     Paste stuff:<br>
-                    <code>Need decklists from {{#deckless}}{{> gameName}}, {{/deckless}}</code>
+                    <code>Need decklists from {{deckless}}</code>
                 </p>
             {{/notYetStarted}}
         </div>
