Replace inline styles with a CSS class
Remove a class that wasn't doing anything.

--- a/gatherling/styles/ChandraNeue/css/stylesheet.css
+++ b/gatherling/styles/ChandraNeue/css/stylesheet.css
@@ -86,6 +86,10 @@ fieldset {
     text-align: center;
 }
 
+.warning {
+    color: red;
+}
+
 #gatherling_main td.box.round-header {
     background-color: grey;
     color: black;
