--- a/gatherling/templates/playerList.mustache
+++ b/gatherling/templates/playerList.mustache
@@ -130,7 +130,7 @@
             <table>
                 <tr>
                     <td>
-                        <p class="squeeze" style="color: red"><b>Players added after the event has started:</b></p>
+                        <p class="warning"><b>Players added after the event has started:</b></p>
                         <ul>
                             <li>receive 0 points for any rounds already started</li>
                             <li>will be paired when the next round begins</li>
@@ -143,7 +143,7 @@
             <table>
                 <tr>
                     <td>
-                        <p class="squeeze" style="color: red"><b>Warning: Players who have not entered deck lists will be dropped automatically!</b></p>
+                        <p class="wanrning"><b>Warning: Players who have not entered deck lists will be dropped automatically!</b></p>
                         {{#isSingleElim}}
                             <p>Note: When assigning initial seeds, players will be paired 1v2, 3v4, 5v6, etc.</p>
                         {{/isSingleElim}}
