Improve our camel-casing to cope with input like OP_Match (=> opMatch)

--- a/gatherling/templates/partials/eventStandings.mustache
+++ b/gatherling/templates/partials/eventStandings.mustache
@@ -23,9 +23,9 @@
             <td>{{rank}}</td>
             <td>{{#gameName}}{{> gameName}}{{/gameName}}</td>
             <td>{{matchScore}}</td>
-            <td>{{oPMatch}}</td>
-            <td>{{pLGame}}</td>
-            <td>{{oPGame}}</td>
+            <td>{{opMatch}}</td>
+            <td>{{plGame}}</td>
+            <td>{{opGame}}</td>
             <td>{{matchesPlayed}}</td>
             <td>{{byes}}</td>
         </tr>
