Factor out a rather pointless template

--- a/gatherling/templates/eventForm.mustache
+++ b/gatherling/templates/eventForm.mustache
@@ -15,7 +15,7 @@
                         <td>
                             <ol class="inline-list pipe">
                                 {{#navLinks}}
-                                    <li>{{> eventLink}}</li>
+                                    <li><a href="{{link}}">{{text}}</a></li>
                                 {{/navLinks}}
                             </ol>
                         </td>
