--- a/gatherling/templates/medalList.mustache
+++ b/gatherling/templates/medalList.mustache
@@ -4,11 +4,11 @@
         {{> controlPanel}}
         <form action="event.php" method="post" enctype="multipart/form-data">
             <input type="hidden" name="name" value="{{event.name}}">
-            <table class="c" style="border-width: 0">
+            <table class="c">
                 <tr>
                     <td colspan="2">
                         <input type="hidden" name="view" value="reg">
-                        <table class="c" style="border-width: 0">
+                        <table class="c">
                             <tr>
                                 <td class="c" colspan="2"><b>Medals</b></td>
                             </tr>
