--- a/gatherling/templates/playerList.mustache
+++ b/gatherling/templates/playerList.mustache
@@ -5,7 +5,7 @@
         <form action="event.php" method="post">
             <input type="hidden" name="name" value="{{event.name}}">
             <input type="hidden" name="view" value="reg">
-            <table style="border-width: 0">
+            <table>
                 <tr>
                     <td colspan="5">
                         <h2>{{event.name}}</h2>
