--- a/gatherling/templates/pointsAdjustmentForm.mustache
+++ b/gatherling/templates/pointsAdjustmentForm.mustache
@@ -4,7 +4,7 @@
         {{> controlPanel}}
         <form action="event.php" method="post">
             <input type="hidden" name="name" value="{{event.name}}" />
-            <table class="c" style="border-width: 0">
+            <table class="c">
                <input type="hidden" name="view" value="points_adj">
                 <tr class="top">
                     <th>Player</th
