--- a/gatherling/templates/reportsForm.mustache
+++ b/gatherling/templates/reportsForm.mustache
@@ -2,7 +2,7 @@
     <div id="gatherling_main" class="box">
         <div class="uppertitle">Host Control Panel</div>
         {{> controlPanel}}
-        <table class="c" style="border-width: 0">
+        <table class="c">
             <tr>
                 <td colspan="3" class="c"><h2><b>Player Information</b></h2></td>
             </tr>
