--- a/gatherling/templates/eventList.mustache
+++ b/gatherling/templates/eventList.mustache
@@ -2,7 +2,7 @@
     <div id="gatherling_main" class="box">
         <div class="uppertitle">Host Control Panel</div>
         <form action="event.php" method="get">
-            <table class="form" style="border-width: 0">
+            <table class="form">
                 <tr>
                     <td colspan="2" class="c"><b>Filters</b></td>
                 </tr>
@@ -45,7 +45,7 @@
                     </td>
                 </tr>
             </table>
-            <table style="border-width: 0" cellpadding="3">
+            <table cellpadding="3">
                 <tr>
                     <td colspan="5">&nbsp;</td>
                 </tr>
