Rename linkTo to deckLink to avoid ambiguity, and componentize

--- a/gatherling/templates/playerList.mustache
+++ b/gatherling/templates/playerList.mustache
@@ -78,7 +78,7 @@
                             {{/player.emailAddress}}
                         </td>
                         <td>
-                            {{#linkTo}}{{> linkTo}}{{/linkTo}}
+                            {{#deckLink}}{{> deckLink}}{{/deckLink}}
                             {{#createDeckLink}}{{> createDeckLink}}{{/createDeckLink}}
                         </td>
                         {{#format.tribal}}
