--- a/gatherling/templates/partials/footer.mustache
+++ b/gatherling/templates/partials/footer.mustache
@@ -7,5 +7,7 @@
             <div class="clear"></div>
         </div> <!-- container -->
         <script src="action.js" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/luxon@3.4.0/build/global/luxon.min.js"></script>
+        <script type="module" src="{{jsLink}}" defer></script>
     </body>
 </html>
