Convert eventereport.php into a couple of Pages
I cleaned some stuff up here but I also left a lot of nonsense in place. We can
do all the metagame stuff without creating a temporary table, for example, but
it's questionable whether we even want or need that page in its current form so
mostly I just concerned myself with chopping the existing functionality across.

--- a/gatherling/templates/partials/eventStandings.mustache
+++ b/gatherling/templates/partials/eventStandings.mustache
@@ -5,7 +5,7 @@
     </th>
     <tr>
         <td colspan="8">
-            <h6>{{event.name}}</h6>
+            <h6>{{eventName}}</h6>
         </td>
     </tr>
     <tr>
