Remove stray exclamation point in template

--- a/gatherling/templates/playerList.mustache
+++ b/gatherling/templates/playerList.mustache
@@ -83,7 +83,7 @@
                         </td>
                         {{#format.tribal}}
                             <td>
-                                {{tribe}}!
+                                {{tribe}}
                             </td>
                         {{/format.tribal}}
                         <td class="c">
